# The-Bank

./: README.md
banking app/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
banking app/alembic/: env.py
banking app/alembic/versions/: 752538f51fb8_initial_clean_migration.py  898ec1394bb6_add_account_name_and_decimal_balance.py
banking app/src/banking_app/: __init__.py  config.py  database.py  main.py
banking app/src/banking_app/auth/: dependencies.py  utils.py
banking app/src/banking_app/crud/: account.py  transfer.py  user.py
banking app/src/banking_app/models/: __init__.py  account.py  ledger.py  transfer.py  user.py
banking app/src/banking_app/routers/: account.py  auth.py
banking app/src/banking_app/schemas/: account.py  auth.py
banking app/src/banking_app/tests/: conftest.py  test_auth.py  test_transfer.py
frontend/: README.md  TECHNICAL.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/accounts/: route.ts
frontend/app/api/accounts/transactions/: route.ts
frontend/app/api/accounts/transfer/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/auth/signup/: route.ts
frontend/app/dashboard/: page.tsx
frontend/components/: app-sidebar.tsx  auth-modal.tsx  chart-area-interactive.tsx  create-account-modal.tsx  data-table.tsx  nav-main.tsx  providers.tsx  section-cards.tsx  site-header.tsx  transfer-modal.tsx
frontend/components/providers/: auth-provider.tsx
frontend/lib/: store.ts
