[project]
name = "banking-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulwasea89", email = "abdulwasea853@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "alembic>=1.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
banking-app = "banking_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
